--- a/.env.example
+++ b/.env.example
@@ -16,8 +16,8 @@ NPMP_LOG_LEVEL=INFO
 NPMP_VERIFY_TLS=false
 
 # Docker sync
-# Prefix for docker labels (must end with '-')
-NPMP_DOCKER_LABEL_PREFIX=npmp-
+# Prefix for docker labels (must end with '.')
+NPMP_DOCKER_LABEL_PREFIX=npmp.
 
 # Docker connection (optional)
 # If not set, defaults to local Docker socket (unix:///var/run/docker.sock)
