--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,20 @@ NPMP_SECRET=changeme
 
 # Logging
 NPMP_LOG_LEVEL=INFO
+# NPMP_LOG_CONSOLE_STREAM=stdout
+
+# HTTP retries (transient disconnect/transport errors)
+# Total attempts = NPMP_HTTP_RETRY_COUNT + 1
+# NPMP_HTTP_RETRY_COUNT=3
+
+# Optional file logging
+# If set to an existing directory or a path ending with '/', logs to <dir>/npmp-cli.log
+# NPMP_LOG_FILE=./npmp-cli.log
+# NPMP_LOG_FILE=./logs/
+
+
+# Optional: separate file logging level (defaults to NPMP_LOG_LEVEL)
+# NPMP_LOG_FILE_LEVEL=DEBUG
 
 # TLS verification
 # Set to 0/false/no to disable certificate verification.
@@ -22,3 +36,7 @@ NPMP_DOCKER_LABEL_PREFIX=npmp.
 # Docker connection (optional)
 # If not set, defaults to local Docker socket (unix:///var/run/docker.sock)
 # DOCKER_HOST=tcp://remote-host:2375
+
+# Optional: use a different env file by setting NPMP_ENV_FILE in your shell before running npmp-cli.
+# Example:
+#   export NPMP_ENV_FILE=.env.prod
