--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,12 +4,12 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "npmp-cli"
-version = "0.2.53"
+version = "0.2.54"
 description = "Python CLI for NPMplus (ZoeyVid/NPMplus)"
 readme = "README.md"
 requires-python = ">=3.10"
 license = { file = "LICENSE.txt" }
-authors = [{ name = "Jaano", url = "https://github.com/Jaano" }]
+authors = [{ name = "Jaano" }]
 dependencies = [
   "docker>=7.0",
   "httpx>=0.26",
