More commands and refactorings

--- a/.env.example
+++ b/.env.example
@@ -3,8 +3,7 @@
 # Base URL to your NPMplus instance (without /api is fine)
 NPMP_BASE_URL=https://npmproxy:81
 
-# Auth (choose ONE approach)
-# NPMP_TOKEN=<jwt cookie value>
+# Auth (required)
 NPMP_IDENTITY=bot
 NPMP_SECRET=changeme
 
@@ -21,12 +20,11 @@ NPMP_LOG_LEVEL=INFO
 # NPMP_LOG_FILE=./npmp-cli.log
 # NPMP_LOG_FILE=./logs/
 
-
 # Optional: separate file logging level (defaults to NPMP_LOG_LEVEL)
 # NPMP_LOG_FILE_LEVEL=DEBUG
 
 # TLS verification
-# Set to 0/false/no to disable certificate verification.
+# Set to false to disable certificate verification.
 NPMP_VERIFY_TLS=false
 
 # Docker sync
